[gd_scene load_steps=8 format=3 uid="uid://becc7q6vesnvk"]

[ext_resource type="Script" path="res://main.gd" id="1_0ovi2"]
[ext_resource type="PackedScene" uid="uid://cpihhhmlit8x8" path="res://player.tscn" id="1_h8gx7"]
[ext_resource type="PackedScene" uid="uid://biaq88j656pcr" path="res://mob.tscn" id="2_tw6u8"]
[ext_resource type="Script" path="res://UI.gd" id="3_jcvny"]
[ext_resource type="FontFile" uid="uid://bqsbcr0o6g3yo" path="res://fonts/Xolonium-Regular.ttf" id="3_ufll7"]

[sub_resource type="Theme" id="Theme_4uw1e"]
default_font = ExtResource("3_ufll7")
default_font_size = 40

[sub_resource type="Curve2D" id="Curve2D_6xypl"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node2D"]
script = ExtResource("1_0ovi2")
mob_scene = ExtResource("2_tw6u8")

[node name="Background" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 720.0
size_flags_horizontal = 4
color = Color(0, 0.560784, 0.556863, 1)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_jcvny")

[node name="Score" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = 34.0
offset_right = 16.0
offset_bottom = 57.0
grow_horizontal = 2
theme = SubResource("Theme_4uw1e")
text = "Score: 0"

[node name="Player" parent="." instance=ExtResource("1_h8gx7")]
position = Vector2(0, 0)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_6xypl")

[node name="SpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="PlayerInitialPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
